# web-macros

./: app.py  dict.xlsx  extended.xlsx  pyproject.toml
templates/: upload_form.html
