[tool.poetry]
name = "web-macros"
version = "0.1.0"
description = ""
authors = ["Main Admin <roman.kalashnikov.kazan@gmail.com>"]
readme = "README.md"
packages = [{include = "web_macros"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
fastapi = "^0.108.0"
pandas = "2.0.0"
uvicorn = "^0.25.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
xlrd = ">=2.0.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
